Corrections in mixin

--- a/wp-content/themes/mc2015/css/_mixins.sass
+++ b/wp-content/themes/mc2015/css/_mixins.sass
@@ -3,13 +3,15 @@
 		@content
 	&::-moz-full-screen
 		@content
-	&::-ms-full-screen
+	&::-ms-fullscreen
 		@content
 	&:-webkit-full-screen
 		@content
 	&:-moz-full-screen
 		@content
-	&:-ms-full-screen
+	&:-ms-fullscreen
+		@content
+	&:fullscreen
 		@content
 
 =placeholder()
