--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -1332,26 +1332,26 @@ article.artist.sticky .post-title {
   .post-gallery::-moz-full-screen .owl-carousel {
     margin: 0 auto;
     width: 95%; }
-.post-gallery::-ms-full-screen {
+.post-gallery::-ms-fullscreen {
   background-color: white;
   border: 10px solid black;
   height: 100%;
   padding: 2em;
   width: 100%; }
-  .post-gallery::-ms-full-screen button.exit-fs {
+  .post-gallery::-ms-fullscreen button.exit-fs {
     display: block; }
-  .post-gallery::-ms-full-screen button.icon-expand {
+  .post-gallery::-ms-fullscreen button.icon-expand {
     display: none; }
-  .post-gallery::-ms-full-screen figure {
+  .post-gallery::-ms-fullscreen figure {
     background-color: white; }
-  .post-gallery::-ms-full-screen .gallery-controls {
+  .post-gallery::-ms-fullscreen .gallery-controls {
     left: 1em;
     right: 1em; }
-  .post-gallery::-ms-full-screen .img {
+  .post-gallery::-ms-fullscreen .img {
     background: white;
     line-height: 88vh;
     height: 88vh; }
-  .post-gallery::-ms-full-screen .owl-carousel {
+  .post-gallery::-ms-fullscreen .owl-carousel {
     margin: 0 auto;
     width: 95%; }
 .post-gallery:-webkit-full-screen {
@@ -1398,26 +1398,114 @@ article.artist.sticky .post-title {
   .post-gallery:-moz-full-screen .owl-carousel {
     margin: 0 auto;
     width: 95%; }
-.post-gallery:-ms-full-screen {
+.post-gallery:-ms-fullscreen {
   background-color: white;
   border: 10px solid black;
   height: 100%;
   padding: 2em;
   width: 100%; }
-  .post-gallery:-ms-full-screen button.exit-fs {
+  .post-gallery:-ms-fullscreen button.exit-fs {
     display: block; }
-  .post-gallery:-ms-full-screen button.icon-expand {
+  .post-gallery:-ms-fullscreen button.icon-expand {
     display: none; }
-  .post-gallery:-ms-full-screen figure {
+  .post-gallery:-ms-fullscreen figure {
     background-color: white; }
-  .post-gallery:-ms-full-screen .gallery-controls {
+  .post-gallery:-ms-fullscreen .gallery-controls {
     left: 1em;
     right: 1em; }
-  .post-gallery:-ms-full-screen .img {
+  .post-gallery:-ms-fullscreen .img {
     background: white;
     line-height: 88vh;
     height: 88vh; }
-  .post-gallery:-ms-full-screen .owl-carousel {
+  .post-gallery:-ms-fullscreen .owl-carousel {
+    margin: 0 auto;
+    width: 95%; }
+.post-gallery:-webkit-full-screen {
+  background-color: white;
+  border: 10px solid black;
+  height: 100%;
+  padding: 2em;
+  width: 100%; }
+.post-gallery:-moz-full-screen {
+  background-color: white;
+  border: 10px solid black;
+  height: 100%;
+  padding: 2em;
+  width: 100%; }
+.post-gallery:-ms-fullscreen {
+  background-color: white;
+  border: 10px solid black;
+  height: 100%;
+  padding: 2em;
+  width: 100%; }
+.post-gallery:fullscreen {
+  background-color: white;
+  border: 10px solid black;
+  height: 100%;
+  padding: 2em;
+  width: 100%; }
+  .post-gallery:-webkit-full-screen button.exit-fs {
+    display: block; }
+  .post-gallery:-moz-full-screen button.exit-fs {
+    display: block; }
+  .post-gallery:-ms-fullscreen button.exit-fs {
+    display: block; }
+  .post-gallery:fullscreen button.exit-fs {
+    display: block; }
+  .post-gallery:-webkit-full-screen button.icon-expand {
+    display: none; }
+  .post-gallery:-moz-full-screen button.icon-expand {
+    display: none; }
+  .post-gallery:-ms-fullscreen button.icon-expand {
+    display: none; }
+  .post-gallery:fullscreen button.icon-expand {
+    display: none; }
+  .post-gallery:-webkit-full-screen figure {
+    background-color: white; }
+  .post-gallery:-moz-full-screen figure {
+    background-color: white; }
+  .post-gallery:-ms-fullscreen figure {
+    background-color: white; }
+  .post-gallery:fullscreen figure {
+    background-color: white; }
+  .post-gallery:-webkit-full-screen .gallery-controls {
+    left: 1em;
+    right: 1em; }
+  .post-gallery:-moz-full-screen .gallery-controls {
+    left: 1em;
+    right: 1em; }
+  .post-gallery:-ms-fullscreen .gallery-controls {
+    left: 1em;
+    right: 1em; }
+  .post-gallery:fullscreen .gallery-controls {
+    left: 1em;
+    right: 1em; }
+  .post-gallery:-webkit-full-screen .img {
+    background: white;
+    line-height: 88vh;
+    height: 88vh; }
+  .post-gallery:-moz-full-screen .img {
+    background: white;
+    line-height: 88vh;
+    height: 88vh; }
+  .post-gallery:-ms-fullscreen .img {
+    background: white;
+    line-height: 88vh;
+    height: 88vh; }
+  .post-gallery:fullscreen .img {
+    background: white;
+    line-height: 88vh;
+    height: 88vh; }
+  .post-gallery:-webkit-full-screen .owl-carousel {
+    margin: 0 auto;
+    width: 95%; }
+  .post-gallery:-moz-full-screen .owl-carousel {
+    margin: 0 auto;
+    width: 95%; }
+  .post-gallery:-ms-fullscreen .owl-carousel {
+    margin: 0 auto;
+    width: 95%; }
+  .post-gallery:fullscreen .owl-carousel {
     margin: 0 auto;
     width: 95%; }
 
