Picture credits compatibility with other browsers

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -675,22 +675,17 @@ article
 	transform: rotate(180deg)
 
 .picture-credits
-	bottom: 0
 	display: none
 	font-size: 9px
 	letter-spacing: 0.2em
 	line-height: 1em
-	margin-right: 1em
 	position: absolute
 	right: 0
 	text-align: center
 	text-transform: uppercase
-	top: 0
-	transform: rotate(180deg)
-	-webkit-writing-mode: vertical-lr
-	-moz-writing-mode: vertical-lr
-	-ms-writing-mode: vertical-lr
-	writing-mode: vertical-lr
+	transform: rotate(-90deg) translate(4em, -1em)
+	transform-origin: bottom right
+	width: 100vh
 	z-index: 0
 
 	span
