--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -754,24 +754,21 @@ article {
   transform: rotate(180deg); }
 
 .picture-credits {
-  bottom: 0;
   display: none;
   font-size: 9px;
   letter-spacing: 0.2em;
   line-height: 1em;
-  margin-right: 1em;
   position: absolute;
   right: 0;
   text-align: center;
   text-transform: uppercase;
-  top: 0;
-  -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
-  -webkit-writing-mode: vertical-lr;
-  -moz-writing-mode: vertical-lr;
-  -ms-writing-mode: vertical-lr;
-  writing-mode: vertical-lr;
+  -webkit-transform: rotate(-90deg) translate(4em, -1em);
+  -ms-transform: rotate(-90deg) translate(4em, -1em);
+  transform: rotate(-90deg) translate(4em, -1em);
+  -webkit-transform-origin: bottom right;
+  -ms-transform-origin: bottom right;
+  transform-origin: bottom right;
+  width: 100vh;
   z-index: 0; }
   .picture-credits span:not(:first-of-type):before {
     content: "/";
