CSS tiny adjustments

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -875,14 +875,8 @@ article
 	position: absolute
 	right: 0.5rem
 	-webkit-text-orientation: upright
-	-moz-text-orientation: upright
-	-ms-text-orientation: upright
-	text-orientation: upright
 	top: 0.5rem
 	-webkit-writing-mode: vertical-lr
-	-moz-writing-mode: vertical-lr
-	-ms-writing-mode: vertical-lr
-	writing-mode: vertical-lr
 	z-index: 1
 
 	a
@@ -1042,7 +1036,7 @@ article
 @media screen and (max-width: $tablet)
 	.navigation-menu
 		height: $menu_height
-		transition: all 0.3
+		transition: all 0.3s
 		width: 100%
 
 		nav,
