--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -9,7 +9,7 @@ article
 
 		.post-title
 			margin: 0.5em auto
-			text-shadow: 1px 1px white
+			//text-shadow: 1px 1px white
 
 	&.exhibition
 		.post-actions
@@ -79,7 +79,7 @@ article
 			border-bottom: 2px solid transparent
 			color: black
 			display: inline-block
-			font-size: 12px
+			font-size: 14px
 			font-weight: 500
 			letter-spacing: 0.1em
 			padding-bottom: 0.25em
@@ -228,14 +228,16 @@ article
 	position: relative
 
 	.exhibition-artist
-		font-size: 32px
+		font-size: 34px
 		font-weight: bold
+		letter-spacing: 0.1em
 		margin: 0
 		text-transform: uppercase
 
 	.exhibition-content
 		background: rgba(255, 255, 255, 0.8)
 		height: 100%
+		letter-spacing: 0.15em
 		padding: 7em 1em
 		text-align: center
 		transition: 0.3s all
@@ -251,8 +253,10 @@ article
 		margin: 0 auto 1em auto
 
 	.exhibition-text
-		font-size: 18px
+		font-size: 14px
 		font-weight: bold
+		letter-spacing: 0.2em
+		line-height: 1.4em
 		margin: 0 auto
 		text-transform: uppercase
 
@@ -264,10 +268,11 @@ article
 				margin-bottom: 0
 
 	.exhibition-title
-		font-size: 24px
+		font-size: 22px
 		font-weight: bold
+		letter-spacing: 0.15em
 		line-height: 1em
-		margin: 0.5em auto
+		margin: 0.65em auto
 		text-transform: uppercase
 
 	.read-more
@@ -308,7 +313,7 @@ article
 	width: 300px
 
 	.exhibition-artist
-		font-size: 20px
+		font-size: 18px
 		font-weight: bold
 		margin: 0
 
@@ -344,8 +349,9 @@ article
 	.exhibition-title
 		font-size: 18px
 		font-weight: bold
+		line-height: 0.9em
 		margin: 0
-		margin-top: 0.25em
+		margin-top: 0.65em
 
 	&:hover .exhibition-img > div
 		opacity: 1
@@ -453,7 +459,7 @@ article
 	a
 		color: rgba(0, 0, 0, 0.3)
 		font-weight: bold
-		letter-spacing: 0.2em
+		letter-spacing: 0.3em
 
 		&:hover
 			color: black
@@ -770,7 +776,7 @@ article
 				color: white
 				display: inline-block
 				font-size: xx-small
-				margin: 0 0.2em
+				margin: 0 0.5em
 				padding: 0.5em
 				transition: 0.3s all
 
@@ -944,7 +950,7 @@ article
 
 	.social-network
 		display: inline-block
-		font-size: 1.5em
+		font-size: 1em
 		padding: 0.25em
 
 		a
@@ -952,7 +958,7 @@ article
 			border-radius: 50%
 			box-shadow: 0 0 0 1px black
 			color: white
-			font-size: medium
+			font-size: 12px
 			padding: 0.5em
 
 			&:hover
@@ -1091,12 +1097,12 @@ article
 			width: 45%
 
 		&.list
-			margin-top: 3em
-			width: 55%
+			margin-top: 5em
+			width: 40%
 
 			li
 				/*padding: 0 1em*/
-				padding-left: 12%
+				padding-left: 8%
 
 				/*&:nth-of-type(odd)
 					text-align: right*/
@@ -1127,7 +1133,7 @@ article
 			width: 45%
 
 		.exhibition-text
-			width: 60%
+			width: 70%
 
 		.exhibition-title
 			width: 50%
