--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -16,20 +16,27 @@ article
 			top: 0
 
 		.post-info
-			font-weight: 500
-			margin: 0.5em auto 2em auto
+			font-size: 14px
+			font-weight: bold
+			letter-spacing: 0.2em
+			line-height: 1.4em
+			margin: 0em auto 2em auto
 			text-align: center
 			text-transform: uppercase
 
 		.post-title
+			font-size: 34px
+			font-weight: bold
+			letter-spacing: 0.1em
 			margin: 0
 			text-transform: uppercase
 
 		.post-subtitle
-			font-size: 28px
-			font-weight: 500
-			letter-spacing: 0.1em
-			margin: 0.5em auto
+			font-size: 22px
+			font-weight: 700
+			letter-spacing: 0.15em
+			line-height: 1em
+			margin: 0.65em auto
 			max-width: 400px
 			text-transform: uppercase
 
@@ -360,6 +367,7 @@ article
 	font-size: 12px
 	font-weight: bold
 	left: 0
+	letter-spacing: 0.15em
 	position: absolute
 	right: 0
 	text-transform: uppercase
