--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -161,18 +161,25 @@ article {
   article.exhibition .post-actions {
     top: 0; }
   article.exhibition .post-info {
-    font-weight: 500;
-    margin: 0.5em auto 2em auto;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0.2em;
+    line-height: 1.4em;
+    margin: 0em auto 2em auto;
     text-align: center;
     text-transform: uppercase; }
   article.exhibition .post-title {
+    font-size: 34px;
+    font-weight: bold;
+    letter-spacing: 0.1em;
     margin: 0;
     text-transform: uppercase; }
   article.exhibition .post-subtitle {
-    font-size: 28px;
-    font-weight: 500;
-    letter-spacing: 0.1em;
-    margin: 0.5em auto;
+    font-size: 22px;
+    font-weight: 700;
+    letter-spacing: 0.15em;
+    line-height: 1em;
+    margin: 0.65em auto;
     max-width: 400px;
     text-transform: uppercase; }
   article.post {
@@ -457,6 +464,7 @@ article {
   font-size: 12px;
   font-weight: bold;
   left: 0;
+  letter-spacing: 0.15em;
   position: absolute;
   right: 0;
   text-transform: uppercase;
