Post attachment icon size

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -722,7 +722,7 @@ article
 			box-shadow: 0 0 0 1px
 			color: white
 			display: inline-block
-			font-size: medium
+			font-size: 12px
 			padding: 0.5em
 			transition: all 0.3s
 
