--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -807,7 +807,7 @@ article {
       box-shadow: 0 0 0 1px;
       color: white;
       display: inline-block;
-      font-size: medium;
+      font-size: 12px;
       padding: 0.5em;
       -webkit-transition: all 0.3s;
       transition: all 0.3s; }
