--- a/wp-content/themes/mc2015/css/_state.sass
+++ b/wp-content/themes/mc2015/css/_state.sass
@@ -26,10 +26,14 @@ article.artist.sticky
 
 		figure
 			background-color: white
+			cursor: default
 
 		.gallery-controls
-			left: 1em
-			right: 1em
+			.owl-next
+				right: 1em
+
+			.owl-prev
+				left: 1em
 		
 		.img
 			background: white
