Background color for figcaptions on fullscreen

--- a/wp-content/themes/mc2015/css/_state.sass
+++ b/wp-content/themes/mc2015/css/_state.sass
@@ -24,6 +24,9 @@ article.artist.sticky
 			&.icon-expand
 				display: none
 
+		figcaption
+			background-color: white
+
 		figure
 			background-color: white
 			cursor: default
