Removed publish date in news page

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -824,7 +824,6 @@ article
 
 	figure
 		background-color: white
-		cursor: zoom-in
 		position: relative
 
 	.img
@@ -850,6 +849,9 @@ article
 
 			&.owl-prev
 				left: -1.5em
+
+	.owl-carousel figure
+		cursor: zoom-in
 
 .post-share
 	margin-top: 1em
