--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -44,10 +44,14 @@ article
 		margin-bottom: 1em
 
 		.post-actions
-			top: 0
+			position: static
 
 		.post-attachment-link
 			text-transform: uppercase
+
+		.post-content
+			margin: 2em 0
+			width: 100%
 			
 		.post-title
 			margin-top: 0.1em
