--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -434,6 +434,13 @@ article
 	a
 		font-size: 3rem
 
+.mc4wp-alert
+	font-size: 0.7em
+	font-weight: 500
+	letter-spacing: 0.1em
+	margin-top: 1.4em
+	text-transform: uppercase
+
 .navigation-menu
 	background: rgba(255, 255, 255, 0.7)
 	border: 10px solid black
