--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -968,7 +968,7 @@ article
 
 .social-networks
 	list-style-type: none
-	margin: 0.5em 0
+	margin: 0.5em 0 1.1em 0
 	padding: 0
 	text-align: center
 
@@ -1260,7 +1260,10 @@ article
 	.artists
 		&.thumb
 			li
-				width: 250px
+				width: 280px
+
+			.artist-name
+				padding: 3.5em 0
 
 	.events
 		display: block
