--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -57,7 +57,7 @@ article
 			margin-top: 0.1em
 
 .announcements
-	font-size: 11px
+	font-size: 10px
 	font-weight: 500
 	letter-spacing: 0.2em
 	margin: 0 auto
@@ -1090,7 +1090,7 @@ article
 		.logo
 			left: 10px
 			position: absolute
-			top: 0
+			top: 0.5em
 
 		.menu
 			font-size: 33px
@@ -1106,7 +1106,7 @@ article
 			font-size: 1.5em
 			position: absolute
 			right: 1em
-			top: 1em
+			top: 0.75em
 			transition: color 0.3s
 
 @media screen and (min-width: $tablet)
@@ -1114,6 +1114,9 @@ article
 		margin: 0 auto
 		max-width: 800px
 		width: 75%
+
+	.announcements
+		font-size: 11px
 
 	.artists
 		li
