--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -38,7 +38,8 @@ body.home,
 html,
 main.index,
 .wrap.index {
-  min-height: 100%; }
+  min-height: 100%;
+  height: 100%; }
 
 button {
   background: none;
@@ -195,7 +196,7 @@ article {
       margin-top: 0.1em; }
 
 .announcements {
-  font-size: 11px;
+  font-size: 10px;
   font-weight: 500;
   letter-spacing: 0.2em;
   margin: 0 auto;
@@ -1133,7 +1134,7 @@ article {
     .navigation-menu .logo {
       left: 10px;
       position: absolute;
-      top: 0; }
+      top: 0.5em; }
     .navigation-menu .menu {
       font-size: 33px; }
     .navigation-menu .nav-footer {
@@ -1146,7 +1147,7 @@ article {
       font-size: 1.5em;
       position: absolute;
       right: 1em;
-      top: 1em;
+      top: 0.75em;
       -webkit-transition: color 0.3s;
       transition: color 0.3s; } }
 @media screen and (min-width: 48em) {
@@ -1154,6 +1155,9 @@ article {
     margin: 0 auto;
     max-width: 800px;
     width: 75%; }
+
+  .announcements {
+    font-size: 11px; }
 
   .artists li {
     display: inline-block;
