--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -656,9 +656,9 @@ article
 		&.prev
 			background-color: white
 			border-radius: 50%
-			font-size: 22px
+			font-size: 12px
 			height: 24px
-			padding: 0
+			padding: 0.4em
 			width: 24px
 
 			&:hover
