--- a/wp-content/themes/mc2015/css/_layout.sass
+++ b/wp-content/themes/mc2015/css/_layout.sass
@@ -48,7 +48,6 @@ main
 		.menu
 			font-size: 33px
 			font-weight: bold
-			margin-bottom: 0.5em
 			padding: 0
 			text-align: center
 
@@ -80,6 +79,20 @@ main
 		height: 100%
 		margin-right: -0.3em
 		vertical-align: middle
+
+@media screen and (max-width: $tablet)
+	main.index
+		.announcements
+			bottom: 1em
+			left: 1.5em
+			position: absolute
+			right: 1.5em
+
+		.footer-items
+			display: none !important
+
+		.menu
+			font-size: 40px
 
 @media screen and (min-width: $tablet)
 	main.index
