--- a/wp-content/themes/mc2015/css/_state.sass
+++ b/wp-content/themes/mc2015/css/_state.sass
@@ -40,8 +40,8 @@ article.artist.sticky
 		
 		.img
 			background: white
-			line-height: $carousel_height_fs
-			height: $carousel_height_fs
+			line-height: $carousel_height_fs_mb
+			height: $carousel_height_fs_mb
 
 		.owl-carousel
 			margin: 0 auto
@@ -75,3 +75,12 @@ article.artist.sticky
 
 		#hamburguer
 			color: rgba(255, 255, 255, 0.7)
+
+@media screen and (min-width: $tablet)
+
+	.post-gallery
+		+fullscreen()
+			.img
+				background: white
+				line-height: $carousel_height_fs
+				height: $carousel_height_fs
