Exhibition groups sliding 'smoother'

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -296,7 +296,7 @@ article
 		background-color: white
 
 .exhibition-group
-	display: none
+	//display: none
 	position: relative
 	//opacity: 0
 	//transition: 0.5s all
